# nibbler

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  todos.md
frontends/OpenGL/: CMakeLists.txt
frontends/OpenGL/src/: OpenGL.cpp
frontends/SDL2/: CMakeLists.txt
frontends/SDL2/src/: SDL2.cpp
include/: nibbler.hpp
include/nibbler/: init.hpp
src/: Board.cpp  Snake.cpp  main.cpp
